# Source-EDA

./: .gitignore  CMakeLists.txt  README.md  designwindow.cpp  designwindow.hpp  librarymanager.cpp  librarymanager.hpp  log.cpp  log.hpp  logpopup.cpp  logpopup.hpp  main.cpp  notification.cpp  notification.hpp  notificationpopup.cpp  notificationpopup.hpp  popup.cpp  popup.hpp  sourceeda.cpp  sourceeda.hpp  sourceeda.qrc  sourceeda.ui
projectManager/: librarymanager.cpp  librarymanager.hpp  sourceeda.cpp  sourceeda.hpp
projectManager/parts/: celllist.cpp  celllist.hpp  cellviewlist.cpp  cellviewlist.hpp  liblist.cpp  liblist.hpp
projectManager/popup/: createcell.cpp  createcell.hpp  createcellview.cpp  createcellview.hpp  createlib.cpp  createlib.hpp
resources/: stylesheet.qss
resources/icons/default/: index.theme
ui/: create_cell_popup.ui  create_cellview_popup.ui  create_lib_popup.ui  designwindow.ui  logpopup.ui  mumwindow.ui  notificationpopup.ui  rename_lib_popup.ui
